tools/tests/ui/fail/l1024.cnf
// Test file for error code: L1024
// Expected error: Invalid AUDIO-WAV character in division structure -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-invalid".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
